--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1281,5 +1281,40 @@
   "writeStyleForURL": {
     "message": "this URL",
     "description": "Text for link in toolbar pop-up to write a new style for the current URL"
+  },
+  "optionsCheck": {
+    "message": "Update styles"
+  },
+  "scheduleButton": {
+    "message": "Schedule"
+  },
+  "scheduleButtonActive": {
+    "message": "Scheduled"
+  },
+  "scheduleTitle": {
+    "message": "Add/Edit this schedule",
+    "description": "Title for the messageBox"
+  },
+  "scheduleButtonRetry": {
+    "message": "Retry",
+    "description": "First button for the messageBox"
+  },
+  "scheduleButtonGiveUp": {
+    "message": "I give up ",
+    "description": "Second button for the messageBox"
+  },
+  "scheduleOneEntry": {
+    "message": "Either clear both start and end values to disable the schedule or set both values to enable it",
+    "description": "Description for the messageBox when only one time value is present"
+  },
+  "scheduleEqualEntries": {
+    "message": "Start and end time values cannot be equal",
+    "description": "Description for the messageBox when both start and end time values are equal"
+  },
+  "scheduleFrom": {
+    "message": "From:"
+  },
+  "scheduleTo": {
+    "message": "To:"
   }
 }
